# Storage-blocker-Antivirus

./: README.md  pyproject.toml  requirements.txt
backends/: __init__.py  linux_backend.py  macos_backend.py  windows_backend.py
config/: com.usblocker.plist  default_config.yaml  install_windows.py  usb_blocker.service
core/: __init__.py  allowlist.py  config.py  device.py  interface.py  ipc.py  logger.py
service/: __init__.py  daemon.py  linux_daemon.py  macos_daemon.py  windows_service.py
tests/: test_allowlist.py  test_config.py  test_device.py  test_ipc.py
tray/: app.py  icon.py  ipc_client.py  menus.py
